tests/js/error/semantics/builtin_array9.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var __result1 = ([1,2,3]).toString();
var __expect1 = "1,2,3";

var __result2 = ([]).toString();
var __expect2 = "";

var __result3 = ([1,2,3]).toLocaleString();
var __expect3 = "1,2,3";

var __result4 = ([]).toLocaleString();
var __expect4 = "";